# qr_navigation_2

./: README.md  package.xml  setup.cfg  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/qr_navigation_2/lib/qr_navigation_2/: bottle  bottle_ros2  center_approach  controller  deteccion  followGPS  imu  node_detection_ros2  orange_detection  pub  qos  sus  test_gps  web  web_inter
install/qr_navigation_2/share/qr_navigation_2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: gps_test.launch.py
log/: latest_build
msg/: UBXNavHPPosLLH.msg
qr_navigation_2/: .center_and_approach_test.py.swp  arucoTest.py  arucoZed.py  auxiliary_search.py  bottle_detection.py  bottle_detection_test.py  bottle_detecton.py  center_and_approach_test.py  center_and_approach_test.py.orig  center_and_approach_test_BASE_5539.py  center_and_approach_test_LOCAL_5539.py  center_and_approach_test_REMOTE_5539.py  coord_converter.py  deteccion.py  distance_orange.py  fake_web.py  followGPSauxiliary.py  follow_gps.py  followgps3.py  followgps4.py  followgps5.py  followgps6.py  followgps7.py  image_common.code-workspace  intermediary_web.py  node_controller.py  node_detection.py  obstacle_evasion_test.py  obstacle_evasion_test2.py  orange_ros2.py  search_routine.py  searching.py  target.py  test_center_orange.py  test_imu.py  test_listener_gps.py  test_qos.py
qr_navigation_2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
qr_navigation_2/autonomous_navigation/: search_routine.py
qr_navigation_2/submodules/: alvinxy.py
