<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qr_navigation_2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="iker@todo.todo">iker</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>custom_interfaces</depend>

  <exec_depend>ublox_ubx_msgs</exec_depend>
  <exec_depend>ublox_ubx_interfaces</exec_depend>
  <exec_depend>ublox_dgnss_node</exec_depend>
  <exec_depend>ublox_dgnss</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_link_auto</test_depend>
  <test_depend>ament_link_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
